head: new link img

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <main class="junior">
             <h2>JUNIOR FRONTEND-DEVOLPER</h2>
             <figure>
-            <img src= "img/IMAG0679.jpg" width="65%"height="65%" alt= "It's me">
+            <img src= "https://raw.githubusercontent.com/OlegShturma/rsschool-cv/rsschool-cv-html/IMAG0679.jpg" width="65%"height="65%" alt= "It's me">
             </figure>
         </main>
         <nav class="nav" >
